<resources>
    <string name="app_name">chat-android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">hello</string>
    <string name="chat_app">Chat App</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_account">Login account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="logo">logo</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="re_password">Re-Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_bird">Date of bird</string>
    <string name="confirm">Confirm</string>
    <string name="phone">Phone</string>
    <string name="reset_password">Reset Password</string>
    <string name="type_a_message">Type a message...</string>
    <string name="information">Information</string>
    <string name="profile">Profile</string>
    <string name="seen">seen</string>
    <string name="logout">Logout</string>
    <string name="b_n">bạn:</string>
    <string name="you">You:</string>
    <string name="your_email">Your email</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="game">Game</string>
    <string name="shop">Shop</string>
    <string name="_100">100</string>
    <string name="locked">LOCKED</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="delivered">delivered</string>
</resources>