<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_account"
                android:textSize="26sp"
                android:fontFamily="@font/montserrat_black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text"
                    android:id="@+id/username"
                    android:hint="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text"
                    android:id="@id/email"
                    android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text"
                    android:id="@id/password"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Button"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:id="@+id/btn_register"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text"
                    android:text="@string/already_have_an_account"/>
                <TextView
                    android:id="@+id/login"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#309AEF"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/login"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>