<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/bar_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/toolbar"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_account"
                android:fontFamily="@font/montserrat_black"
                android:textSize="26sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text"
                    android:id="@+id/email"
                    android:layout_marginTop="10dp"
                    app:met_floatingLabel="normal"
                    android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Text"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:met_floatingLabel="normal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/forgot_password"/>

            <Button
                style="@style/Button"
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"/>

            <Button
                style="@style/Button"
                android:text="@string/register"
                android:id="@+id/btn_register"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"/>

            <com.google.android.gms.common.SignInButton
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/google_login" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>