<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartActivity">
    <LinearLayout
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_app"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/chat"
            android:contentDescription="@string/logo"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/login"
            style="@style/Button"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />
        <Button
            android:id="@+id/register"
            style="@style/Button"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />
    </LinearLayout>

</LinearLayout>