<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#309AEF"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/profile_image"/>
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_marginLeft="25dp"
                android:text="@string/username"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_marginStart="25dp" />

            <ImageView
                android:foregroundGravity="right"
                android:id="@+id/info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_info_message_foreground"
                android:layout_marginLeft="230dp"
                android:layout_marginStart="230dp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_below="@+id/bar_layout"
        android:layout_above="@+id/text_send"/>

    <EditText
        android:fontFamily="@font/montserrat_light"
        android:id="@+id/text_send"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:hint="@string/type_a_message"
        android:padding="10dp"
        android:background="@android:color/transparent"/>
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btn_send"
        android:src="@drawable/ic_action_name"
        android:layout_marginBottom="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/todo"
        android:layout_alignParentBottom="true" />


</RelativeLayout>